--- a/Interactive/Code_Project/lamp.html
+++ b/Interactive/Code_Project/lamp.html
@@ -32,17 +32,51 @@
     const renderer = new THREE.WebGLRenderer();
     document.body.appendChild(renderer.domElement);
 
-    camera.position.set(5, 3, 5); // Place camera at (5, 5, 5)
+    camera.position.set(16, 2, -0.25); // Place camera at (5, 5, 5)
     camera.lookAt(0, 0, 0);       // Point it toward the origin (0, 0, 0)
-
+    camera.rotation.set(0, 0, 0); // Set the camera's rotation to 0
 
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.body.appendChild(renderer.domElement);
 
-    // Add lighting
-    const light = new THREE.DirectionalLight(0xffffff, 8);
-    light.position.set(100, 100, 100).normalize();
-    scene.add(light);
+    let moveZ = 4;
+    let showHelper = false;
+
+    // scene.background = new THREE.Color( 0xe0e0e0 );
+    // scene.fog = new THREE.Fog( 0xe0e0e0, 20, 100 );
+    // lights
+
+    const hemiLight = new THREE.HemisphereLight( 0xffffff, 0x8d8d8d, 1 );
+    hemiLight.position.set( 0, 20, 30 );
+    scene.add( hemiLight );
+
+    const dirLight = new THREE.DirectionalLight( 0xffffff, 1 );
+    dirLight.position.set( 0, 20, 10 );
+    scene.add( dirLight );
+
+    // ground
+
+    const mesh = new THREE.Mesh( new THREE.PlaneGeometry( 2000, 2000 ), new THREE.MeshPhongMaterial( { color: 0xcbcbcb, depthWrite: false } ) );
+    mesh.rotation.x = - Math.PI / 2;
+    scene.add( mesh );
+
+    const grid = new THREE.GridHelper( 200, 40, 0x000000, 0x000000 );
+    grid.material.opacity = 0.2;
+    grid.material.transparent = true;
+    scene.add( grid );
+    // // Add lighting
+    // const light = new THREE.DirectionalLight(0xffffff, 2);
+    // light.position.set(100, (100+moveZ), 100).normalize();
+    // scene.add(light);
+
+
+    const bulbLight = new THREE.PointLight(0xFFFD37, 30, 0);
+    bulbLight.position.set(0, (2+moveZ), 0);
+    scene.add(bulbLight);
+    if(showHelper){
+      const helper = new THREE.PointLightHelper(bulbLight);
+      scene.add(helper);
+    }
 
     // Array to store all loaded objects
     let chainLeft;
@@ -63,16 +97,69 @@
   // Assuming loadObject is a function that returns a Promise
   function loadObject(objPath, mtlPath, initialPosition, scale, color) {
     return new Promise((resolve, reject) => {
-      const mtlLoader = new MTLLoader();
-      mtlLoader.load(mtlPath, (materials) => {
-        materials.preload();
+      if(objPath === 'meshes/chain.obj'){
+          const material = new THREE.MeshPhysicalMaterial({  
+            metalness: 1.0,
+            roughness: 0.4,
+            ambientIntensity: 0.2,
+            aoMapIntensity: 1.0,
+            envMapIntensity: 1.0,
+            displacementScale: 2.436143, // from original model
+            normalScale: 1.0,
+          });
+          const objLoader = new OBJLoader();
+          // objLoader.setMaterials(material);
+          objLoader.load(objPath, (object) => {
+            object.position.copy(initialPosition);
+            object.scale.set(scale, scale, scale);
+            if(showHelper){
+              const boxHelper = new THREE.BoxHelper(object, color);
+              scene.add(boxHelper);
+            }
+            object.traverse((child) => {
+              if (child.isMesh) {
+                child.material = material;  // Apply custom material to each mesh in the object
+              }
+            });
+            // if (color) {
+            //   object.traverse((child) => {
+            //     if (child.isMesh) {
+            //       child.material.color.set(color);
+            //     }
+            //   });
+            // }
+            scene.add(object);
+            resolve(object);
+          }, undefined, reject);
+      }else if(objPath === 'meshes/pendant.obj'){
+        const material = new THREE.MeshPhysicalMaterial({  
+          color: 0xffffff,
+          transmission: 0.93,
+          opacity: 1,
+          metalness: 0,
+          roughness: 0,
+          ior: 4,
+          thickness: 1,
+          specularIntensity: 1,
+          specularColor: 0xffffff,
+          envMapIntensity: 1,
+          lightIntensity: 1,
+          exposure: 1
+        });
         const objLoader = new OBJLoader();
-        objLoader.setMaterials(materials);
+        // objLoader.setMaterials(material);
         objLoader.load(objPath, (object) => {
           object.position.copy(initialPosition);
           object.scale.set(scale, scale, scale);
-          const boxHelper = new THREE.BoxHelper(object, color);
-          scene.add(boxHelper);
+          if(showHelper){
+              const boxHelper = new THREE.BoxHelper(object, color);
+              scene.add(boxHelper);
+          }
+          object.traverse((child) => {
+            if (child.isMesh) {
+              child.material = material;  // Apply custom material to each mesh in the object
+            }
+          });
           // if (color) {
           //   object.traverse((child) => {
           //     if (child.isMesh) {
@@ -83,30 +170,85 @@
           scene.add(object);
           resolve(object);
         }, undefined, reject);
+      }else{
+        const mtlLoader = new MTLLoader();
+        mtlLoader.load(mtlPath, (materials) => {
+        materials.preload();
+
+          // Map the materials for better PBR setup
+          // Iterate through the materials object and apply changes
+        Object.values(materials.materials).forEach((material) => {
+          // Convert the material to MeshPhysicalMaterial for better realism
+          material.metalness = material.metallic || 0;  // Blender metallic maps to Three.js metalness
+          material.roughness = material.roughness || 0.5;  // Blender roughness maps to Three.js roughness
+
+          // If there are texture maps (e.g., diffuse, specular, normal maps), load them
+          if (material.map) {
+            material.map = new THREE.TextureLoader().load(material.map);
+          }
+          if (material.normalMap) {
+            material.normalMap = new THREE.TextureLoader().load(material.normalMap);
+          }
+          if (material.roughnessMap) {
+            material.roughnessMap = new THREE.TextureLoader().load(material.roughnessMap);
+          }
+          if (material.metalnessMap) {
+            material.metalnessMap = new THREE.TextureLoader().load(material.metalnessMap);
+          }
+
+          // Set up the material to be more realistic
+          material.envMap = scene.background; // Use the scene's background as an environment map
+          material.envMapIntensity = 1;  // Adjust the reflection intensity
+          material.needsUpdate = true;  // Force Three.js to reapply material changes
+        });
+
+        const objLoader = new OBJLoader();
+        objLoader.setMaterials(materials);
+        objLoader.load(objPath, (object) => {
+          object.position.copy(initialPosition);
+          object.scale.set(scale, scale, scale);
+          if(showHelper){
+              const boxHelper = new THREE.BoxHelper(object, color);
+              scene.add(boxHelper);
+          }
+          let k = 1;
+          if (color && objPath === 'meshes/lamp.obj') {
+            object.traverse((child) => {
+
+              if (child.isMesh && k == 1) {
+                child.material.color.set("#DBA067");
+                k++;
+              }
+            });
+          }
+          scene.add(object);
+          resolve(object);
+        }, undefined, reject);
       }, undefined, reject);
-    });
+    }});
+  
   }
     // Load objects and assign them to the loadedObjects object
     loadObject('meshes/lamp.obj', 'meshes/lamp.mtl',
-     new THREE.Vector3(0*scale, 2.8*scale, 0*scale), scale, 0xff0000)
+     new THREE.Vector3(0*scale, (2.8*scale)+moveZ, 0*scale), scale, 0xff0000)
       .then(object => loadedObjects.lamp = object);
 
     //left chain
     loadObject('meshes/chain.obj', 'meshes/chain.mtl',
-     new THREE.Vector3(0*scale, 7.78*scale, 1.25*scale), scale, 0x00ff00)
+     new THREE.Vector3(0*scale, (7.78*scale)+moveZ, 1.25*scale), scale, 0x00ff00)
       .then(object => loadedObjects.chainRight = object);
 
     //right chain
     loadObject('meshes/chain.obj', 'meshes/chain.mtl',
-     new THREE.Vector3(0*scale, 7.78*scale, -1.2*scale), scale, 0x0000ff)
+     new THREE.Vector3(0*scale, (7.78*scale)+moveZ, -1.2*scale), scale, 0x0000ff)
       .then(object => loadedObjects.chainLeft = object);
 
     loadObject('meshes/pendant.obj', 'meshes/pendant.mtl',
-     new THREE.Vector3(0*scale, 0*scale, 0*scale), scale, 0xffff00)
+     new THREE.Vector3(0*scale, (0*scale)+moveZ, 0*scale), scale, 0xffff00)
       .then(object => loadedObjects.pendant = object);
 
     loadObject('meshes/switch.obj', 'meshes/switch.mtl',
-     new THREE.Vector3(0*scale, -1.6*scale, -1.0*scale), scale, 0xff00ff)
+     new THREE.Vector3(0*scale, (1*scale)+moveZ, -1.0*scale), scale, 0xff00ff)
       .then(object => loadedObjects._switch = object);
 
     // Track the cursor position
@@ -147,7 +289,7 @@
       //     // console.log(`Object rotation: x=${object.rotation.x.toFixed(2)}, y=${object.rotation.y.toFixed(2)}, z=${object.rotation.z.toFixed(2)}`);
       //   }
       // });
-
+      console.log("Camera at: ", camera.position);
       renderer.render(scene, camera);
     }
     animate();
