--- a/Interactive/Code_Project/lamp.html
+++ b/Interactive/Code_Project/lamp.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Load OBJ File</title>
+  <title>F20GA - Interative</title>
   <style>
     /* Basic CSS to remove margin and make the canvas full screen */
     body {
